--- a/BulbBuddy WatchKit Extension/Info.plist
+++ b/BulbBuddy WatchKit Extension/Info.plist
@@ -27,7 +27,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.raywenderlich.BulbBuddy.watchkitapp</string>
+			<string>com.testing-beta.BulbBuddy.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
